# snm

./: .gitignore  Cargo.toml  README.md
src/: main.rs  tests.rs  typings.rs  ui.rs  util.rs
src/util/: init.rs  netio.rs  saved.rs
