[package]
name = "snm"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/Skaytacium/snm"
license = "MIT"
readme = "README.md"

[dependencies]
zip = "*"
ureq = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
clap = { version = "3", features = ["derive"] }
home = "*"